--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
 <body>
   <link rel="stylesheet" href="/bower_components/semantic-ui/dist/semantic.min.css">
   <script src="/bower_components/phaser/build/phaser.js"></script>
-  <div>Working</div>
+  <div id="canvas"></div>
+  <script src="/js/init.js"></script>
 </body>
 </html>
