--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/bower_components/semantic-ui/dist/semantic.min.css">
   <script src="/bower_components/phaser/build/phaser.js"></script>
   <div id="canvas"></div>
+  <script src="/js/text.js"></script>
   <script src="/js/init.js"></script>
 </body>
 </html>
